# python-project-83

./: .env  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: page_analyzer.yml
page_analyzer/: app.py  db.py  utils.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  url.html  urls.html
