[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "flask app"
authors = ["ao <noemails@to.me>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
flake8 = "^6.0.0"
flask = "^2.3.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
python = "^3.10"
python-dotenv = "^1.0.0"
requests="^2.28.1"
validators = "0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.2"
    "flake8>=7.1.1",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.28.1",
    "validators>=0.34.0",
]

